test/tests/stages/14_pointers/invalid_types/extra_credit/bitwise_xor_pointer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[26]:
  int
  identifier(main)
  (
  void
  )
  {
  unsigned
  long
  *
  identifier(ptr)
  =
  const int(0)
  ;
  long
  identifier(l)
  =
  const int(100)
  ;
  identifier(ptr)
  ^
  identifier(l)
  ;
  return
  const int(0)
  ;
  }
